WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267549
[WGSL] shader,execution,expression,call,builtin,arrayLength:* is failing
https://bugs.webkit.org/show_bug.cgi?id=267549
Summary
[WGSL] shader,execution,expression,call,builtin,arrayLength:* is failing
Tadeu Zagallo
Reported
2024-01-15 09:44:29 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-15 09:44:40 PST
<
rdar://problem/121010619
>
Tadeu Zagallo
Comment 2
2024-01-15 09:59:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22792
EWS
Comment 3
2024-01-16 05:04:17 PST
Committed
273064@main
(aa1bdf7dca23): <
https://commits.webkit.org/273064@main
> Reviewed commits have been landed. Closing PR #22792 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug