Source/WebGPU/WGSL/GlobalVariableRewriter.cpp
@@ -58,6 +58,7 @@ public:
 
     void visit(AST::CompoundStatement&) override;
     void visit(AST::AssignmentStatement&) override;
+    void visit(AST::VariableStatement&) override;
 
     void visit(AST::Expression&) override;
 
@@ -121,12 +122,6 @@ private:
     const Type* packStructType(const Types::Struct*);
     const Type* packArrayType(const Types::Array*);
     void updateReference(AST::Variable&, AST::Expression&);
-
-    enum Packing : uint8_t {
-        Packed   = 1 << 0,
-        Unpacked = 1 << 1,
-        Either   = Packed | Unpacked,
-    };
 
     Packing pack(Packing, AST::Expression&);
     Packing getPacking(AST::IdentifierExpression&);
@@ -277,8 +272,17 @@ void RewriteGlobalVariables::visit(AST::AssignmentStatement& statement)
 {
     Packing lhsPacking = pack(Packing::Either, statement.lhs());
     ASSERT(lhsPacking != Packing::Either);
-    Packing rhsPacking = pack(lhsPacking, statement.rhs());
-    ASSERT_UNUSED(rhsPacking, lhsPacking == rhsPacking);
+    if (lhsPacking == Packing::PackedVec3)
+        lhsPacking = Packing::Either;
+    else
+        lhsPacking = static_cast<Packing>(lhsPacking | Packing::Vec3);
+    pack(lhsPacking, statement.rhs());
+}
+
+void RewriteGlobalVariables::visit(AST::VariableStatement& statement)
+{
+    if (auto* initializer = statement.variable().maybeInitializer())
+        pack(static_cast<Packing>(Packing::Unpacked | Packing::Vec3), *initializer);
 }
 
 void RewriteGlobalVariables::visit(AST::Expression& expression)
@@ -286,7 +290,7 @@ void RewriteGlobalVariables::visit(AST::Expression& expression)
     pack(Packing::Unpacked, expression);
 }
 
-auto RewriteGlobalVariables::pack(Packing expectedPacking, AST::Expression& expression) -> Packing
+Packing RewriteGlobalVariables::pack(Packing expectedPacking, AST::Expression& expression)
 {
     const auto& visitAndReplace = [&](auto& expression) -> Packing {
         auto packing = getPacking(expression);
@@ -298,9 +302,9 @@ auto RewriteGlobalVariables::pack(Packing expectedPacking, AST::Expression& expr
             type = referenceType->element;
         ASCIILiteral operation;
         if (std::holds_alternative<Types::Struct>(*type))
-            operation = packing == Packing::Packed ? "__unpack"_s : "__pack"_s;
+            operation = packing & Packing::Packed ? "__unpack"_s : "__pack"_s;
         else if (std::holds_alternative<Types::Array>(*type)) {
-            if (packing == Packing::Packed) {
+            if (packing & Packing::Packed) {
                 operation = "__unpack"_s;
                 m_callGraph.ast().setUsesUnpackArray();
             } else {
@@ -314,17 +318,17 @@ auto RewriteGlobalVariables::pack(Packing expectedPacking, AST::Expression& expr
             switch (std::get<Types::Primitive>(*vector.element).kind) {
             case Types::Primitive::AbstractInt:
             case Types::Primitive::I32:
-                operation = packing == Packing::Packed ? "int3"_s : "packed_int3"_s;
+                operation = packing & Packing::Packed ? "int3"_s : "packed_int3"_s;
                 break;
             case Types::Primitive::U32:
-                operation = packing == Packing::Packed ? "uint3"_s : "packed_uint3"_s;
+                operation = packing & Packing::Packed ? "uint3"_s : "packed_uint3"_s;
                 break;
             case Types::Primitive::AbstractFloat:
             case Types::Primitive::F32:
-                operation = packing == Packing::Packed ? "float3"_s : "packed_float3"_s;
+                operation = packing & Packing::Packed ? "float3"_s : "packed_float3"_s;
                 break;
             case Types::Primitive::F16:
-                operation = packing == Packing::Packed ? "half3"_s : "packed_half3"_s;
+                operation = packing & Packing::Packed ? "half3"_s : "packed_half3"_s;
                 break;
             default:
                 RELEASE_ASSERT_NOT_REACHED();
@@ -366,7 +370,7 @@ auto RewriteGlobalVariables::pack(Packing expectedPacking, AST::Expression& expr
     }
 }
 
-auto RewriteGlobalVariables::getPacking(AST::IdentifierExpression& identifier) -> Packing
+Packing RewriteGlobalVariables::getPacking(AST::IdentifierExpression& identifier)
 {
     auto packing = Packing::Unpacked;
 
@@ -385,7 +389,7 @@ auto RewriteGlobalVariables::getPacking(AST::IdentifierExpression& identifier) -
     return packing;
 }
 
-auto RewriteGlobalVariables::getPacking(AST::FieldAccessExpression& expression) -> Packing
+Packing RewriteGlobalVariables::getPacking(AST::FieldAccessExpression& expression)
 {
     auto basePacking = pack(Packing::Either, expression.base());
     if (basePacking & Packing::Unpacked)
@@ -401,7 +405,7 @@ auto RewriteGlobalVariables::getPacking(AST::FieldAccessExpression& expression) 
     return packingForType(fieldType);
 }
 
-auto RewriteGlobalVariables::getPacking(AST::IndexAccessExpression& expression) -> Packing
+Packing RewriteGlobalVariables::getPacking(AST::IndexAccessExpression& expression)
 {
     auto basePacking = pack(Packing::Either, expression.base());
     pack(Packing::Unpacked, expression.index());
@@ -417,32 +421,43 @@ auto RewriteGlobalVariables::getPacking(AST::IndexAccessExpression& expression) 
     return packingForType(arrayType.element);
 }
 
-auto RewriteGlobalVariables::getPacking(AST::BinaryExpression& expression) -> Packing
+Packing RewriteGlobalVariables::getPacking(AST::BinaryExpression& expression)
 {
     pack(Packing::Unpacked, expression.leftExpression());
     pack(Packing::Unpacked, expression.rightExpression());
     return Packing::Unpacked;
 }
 
-auto RewriteGlobalVariables::getPacking(AST::UnaryExpression& expression) -> Packing
+Packing RewriteGlobalVariables::getPacking(AST::UnaryExpression& expression)
 {
     pack(Packing::Unpacked, expression.expression());
     return Packing::Unpacked;
 }
 
-auto RewriteGlobalVariables::getPacking(AST::CallExpression& call) -> Packing
+Packing RewriteGlobalVariables::getPacking(AST::CallExpression& call)
 {
     if (is<AST::IdentifierExpression>(call.target())) {
         auto& target = downcast<AST::IdentifierExpression>(call.target());
         if (target.identifier() == "arrayLength"_s) {
             ASSERT(call.arguments().size() == 1);
+            auto arrayOffset = 0;
             const auto& getBase = [&](auto&& getBase, AST::Expression& expression) -> AST::Expression& {
                 if (is<AST::IdentityExpression>(expression))
                     return getBase(getBase, downcast<AST::IdentityExpression>(expression).expression());
                 if (is<AST::UnaryExpression>(expression))
                     return getBase(getBase, downcast<AST::UnaryExpression>(expression).expression());
-                if (is<AST::FieldAccessExpression>(expression))
-                    return getBase(getBase, downcast<AST::FieldAccessExpression>(expression).base());
+                if (is<AST::FieldAccessExpression>(expression)) {
+                    auto& fieldAccess = downcast<AST::FieldAccessExpression>(expression);
+                    auto& base = fieldAccess.base();
+                    auto* type = base.inferredType();
+                    if (auto* reference = std::get_if<Types::Reference>(type))
+                        type = reference->element;
+                    auto& structure = std::get<Types::Struct>(*type).structure;
+                    auto& lastMember = structure.members().last();
+                    RELEASE_ASSERT(lastMember.name().id() == fieldAccess.fieldName().id());
+                    arrayOffset += lastMember.offset();
+                    return getBase(getBase, base);
+                }
                 if (is<AST::IdentifierExpression>(expression))
                     return expression;
                 RELEASE_ASSERT_NOT_REACHED();
@@ -463,7 +478,9 @@ auto RewriteGlobalVariables::getPacking(AST::CallExpression& call) -> Packing
             ASSERT(std::holds_alternative<Types::Pointer>(*arrayPointerType));
             auto& arrayType = std::get<Types::Pointer>(*arrayPointerType).element;
             ASSERT(std::holds_alternative<Types::Array>(*arrayType));
-            auto arrayStride = std::get<Types::Array>(*arrayType).element->size();
+            auto* elementType = std::get<Types::Array>(*arrayType).element;
+            auto arrayStride = elementType->size();
+            arrayStride = WTF::roundUpToMultipleOf(elementType->alignment(), arrayStride);
 
             auto& strideExpression = m_callGraph.ast().astBuilder().construct<AST::Unsigned32Literal>(
                 SourceSpan::empty(),
@@ -471,10 +488,26 @@ auto RewriteGlobalVariables::getPacking(AST::CallExpression& call) -> Packing
             );
             strideExpression.m_inferredType = m_callGraph.ast().types().u32Type();
 
+            AST::Expression* lhs = &length;
+            if (arrayOffset) {
+                auto& arrayOffsetExpression = m_callGraph.ast().astBuilder().construct<AST::Unsigned32Literal>(
+                    SourceSpan::empty(),
+                    arrayOffset
+                );
+                arrayOffsetExpression.m_inferredType = m_callGraph.ast().types().u32Type();
+                lhs = &m_callGraph.ast().astBuilder().construct<AST::BinaryExpression>(
+                    SourceSpan::empty(),
+                    length,
+                    arrayOffsetExpression,
+                    AST::BinaryOperation::Subtract
+                );
+                lhs->m_inferredType = m_callGraph.ast().types().u32Type();
+            }
+
             m_callGraph.ast().setUsesDivision();
             auto& elementCount = m_callGraph.ast().astBuilder().construct<AST::BinaryExpression>(
                 SourceSpan::empty(),
-                length,
+                *lhs,
                 strideExpression,
                 AST::BinaryOperation::Divide
             );
@@ -491,21 +524,9 @@ auto RewriteGlobalVariables::getPacking(AST::CallExpression& call) -> Packing
     return Packing::Unpacked;
 }
 
-auto RewriteGlobalVariables::packingForType(const Type* type) -> Packing
+Packing RewriteGlobalVariables::packingForType(const Type* type)
 {
-    if (auto* referenceType = std::get_if<Types::Reference>(type))
-        return packingForType(referenceType->element);
-
-    if (auto* structType = std::get_if<Types::Struct>(type)) {
-        if (structType->structure.role() == AST::StructureRole::UserDefinedResource)
-            return Packing::Packed;
-    } else if (auto* vectorType = std::get_if<Types::Vector>(type)) {
-        if (vectorType->size == 3)
-            return Packing::Packed;
-    } else if (auto* arrayType = std::get_if<Types::Array>(type))
-        return packingForType(arrayType->element);
-
-    return Packing::Unpacked;
+    return type->packing();
 }
 
 void RewriteGlobalVariables::collectGlobals()
@@ -700,8 +721,6 @@ const Type* RewriteGlobalVariables::packStructType(const Types::Struct* structTy
     if (structType->structure.role() == AST::StructureRole::UserDefinedResource)
         return m_packedStructTypes.get(structType);
 
-    m_callGraph.ast().setUsesPackedStructs();
-
     // Ensure we pack nested structs
     bool packedAnyMember = false;
     for (auto& member : structType->structure.members()) {
@@ -726,6 +745,7 @@ const Type* RewriteGlobalVariables::packStructType(const Types::Struct* structTy
     );
     m_callGraph.ast().append(m_callGraph.ast().declarations(), packedStruct);
     const Type* packedStructType = m_callGraph.ast().types().structType(packedStruct);
+    packedStruct.m_inferredType = packedStructType;
     m_packedStructTypes.add(structType, packedStructType);
     return packedStructType;
 }
@@ -1190,8 +1210,9 @@ void RewriteGlobalVariables::finalizeArgumentBufferStruct(unsigned group, Vector
         AST::Attribute::List { },
         AST::StructureRole::BindGroup
     );
+    argumentBufferStruct.m_inferredType = m_callGraph.ast().types().structType(argumentBufferStruct);
     m_callGraph.ast().append(m_callGraph.ast().declarations(), argumentBufferStruct);
-    m_structTypes.add(group, m_callGraph.ast().types().structType(argumentBufferStruct));
+    m_structTypes.add(group, argumentBufferStruct.m_inferredType);
 }
 
 Vector<unsigned> RewriteGlobalVariables::insertStructs(const PipelineLayout& layout)
